Started to implement platform exclusions (skip: True  # [not osx])
.. but seems we do not need it since R 3.4.2 so implementation is
incomplete for now.

--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -42,13 +42,14 @@ outputs:
     requirements:
       build:
         - m2-base  # [win]
-        - {{ compiler('fortran') }}  # [not win]
-        - {{ compiler('cxx') }}  # [not win]
-        - {{ compiler('c') }}  # [not win]
+        - {{{{ compiler('fortran') }}}}  # [not win]
+        - {{{{ compiler('cxx') }}}}  # [not win]
+        - {{{{ compiler('c') }}}}  # [not win]
       run:
-        - {{ compiler('fortran') }}  # [not win]
-        - {{ compiler('cxx') }}  # [not win]
-        - {{ compiler('c') }}  # [not win]
+        - {{{{ compiler('fortran') }}}}  # [not win]
+        - {{{{ compiler('cxx') }}}}  # [not win]
+        - {{{{ compiler('c') }}}}  # [not win]
+
 
   - name: r-kernsmooth
     version: 2.23_15
@@ -308,7 +309,6 @@ outputs:
     script: install-r-package.sh
     # This is required to make R link correctly on Linux.
     build:
-      skip: True  # [osx]
       rpaths:
         - lib/R/lib/
         - lib/
@@ -545,7 +545,6 @@ outputs:
     script: install-r-package.sh
     # This is required to make R link correctly on Linux.
     build:
-      skip: True  # [osx]
       rpaths:
         - lib/R/lib/
         - lib/
@@ -1021,7 +1020,7 @@ outputs:
         - r-cluster
         - r-codetools
         - r-curl
-        - r-deployrrserve  # [not osx]
+        - r-deployrrserve
         - r-doparallel
         - r-foreach
         - r-foreign
@@ -1039,7 +1038,7 @@ outputs:
         - r-r6
         - r-revoioq
         - r-revomods
-        - r-revoutilsmath  # [not osx]
+        - r-revoutilsmath
         - r-rpart
         - r-runit
         - r-spatial
